[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-dev"
version = "0.1.0"
description = "Development environment for data science with Python and R."
requires-python = ">=3.12"

dependencies = [
    "ipykernel",
    "jupyter-cache",
    "jupyterlab",
    "numpy",
    "pandas",
    "plotly",
    "plotnine",
    "pyjanitor",
    "scikit-learn",
    "seaborn",
    "siuba",
    "pyarrow",
    "radian"
]

[tool.pipx]
include = ["radian"]